--- a/2 курс/TOBD_2022/Tasks/01/01_numpy_lr1_ПИ21_7_Пикалов_Николай.ipynb
+++ b/2 курс/TOBD_2022/Tasks/01/01_numpy_lr1_ПИ21_7_Пикалов_Николай.ipynb
@@ -32,14 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "46m3Zig5VwXE"
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import numpy as np"
    ]
   },
   {
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "id": "e-BmaDE7VsCi",
     "scrolled": true
@@ -61,18 +60,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[0.32611454, 0.05203972, 0.52816728, 0.0807229 , 0.19152091,\n",
-       "        0.35937973, 0.10814084],\n",
-       "       [0.        , 0.69907056, 0.32876071, 0.15154078, 0.21541381,\n",
-       "        0.36727913, 1.        ],\n",
-       "       [0.77761872, 0.87652733, 0.83159426, 0.7487707 , 0.55214041,\n",
-       "        0.01752007, 0.62123522],\n",
-       "       [0.24233355, 0.63658146, 0.14354185, 0.75217015, 0.84951029,\n",
-       "        0.64075251, 0.61972159]])"
-      ]
+      "text/plain": "array([[0.81168668, 0.00450924, 0.03700495, 0.78983493, 0.57794125,\n        1.        , 0.19342426],\n       [0.49847851, 0.91006084, 0.81011387, 0.55035194, 0.21717984,\n        0.49228715, 0.48655157],\n       [0.4766825 , 0.15843801, 0.72656565, 0.56994211, 0.56468017,\n        0.99294544, 0.72252041],\n       [0.74454794, 0.04216397, 0.98275359, 0.62308928, 0.40306818,\n        0.68572358, 0.        ]])"
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,25 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[5, 6, 8, 8, 9, 0, 8, 5, 6, 7],\n",
-       "       [0, 4, 0, 0, 8, 1, 6, 4, 0, 6],\n",
-       "       [6, 4, 1, 5, 9, 6, 8, 3, 4, 2],\n",
-       "       [0, 7, 5, 5, 1, 8, 3, 7, 5, 4],\n",
-       "       [4, 9, 5, 6, 6, 4, 1, 5, 8, 0],\n",
-       "       [7, 7, 2, 1, 3, 9, 7, 6, 1, 7],\n",
-       "       [5, 9, 7, 1, 3, 6, 3, 6, 3, 4],\n",
-       "       [7, 1, 9, 2, 8, 2, 7, 1, 5, 7]])"
-      ]
+      "text/plain": "array([[6, 9, 7, 0, 5, 2, 8, 7, 3, 4],\n       [2, 2, 6, 2, 8, 8, 1, 1, 4, 9],\n       [3, 0, 6, 7, 9, 4, 4, 5, 8, 6],\n       [4, 9, 1, 6, 5, 4, 6, 9, 2, 6],\n       [7, 1, 1, 1, 7, 8, 6, 7, 6, 8],\n       [0, 0, 0, 3, 1, 4, 4, 9, 9, 1],\n       [0, 4, 8, 2, 1, 0, 5, 6, 7, 6],\n       [5, 3, 6, 1, 8, 1, 1, 8, 5, 6]])"
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,23 +113,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "5\n"
      ]
     },
     {
      "data": {
-      "text/plain": [
-       "array([0, 4, 0, 0, 8, 1, 6, 4, 0, 6])"
-      ]
+      "text/plain": "array([0, 0, 0, 3, 1, 4, 4, 9, 9, 1])"
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -179,18 +158,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7 9 9 9 4 5 4 3 6 2]\n",
-      "[3 7 9 1 2 7 6 0 1 6]\n",
-      "12.083045973594572\n"
+      "[2 0 3 0 7 8 4 3 0 7]\n",
+      "[8 3 2 7 2 1 7 0 7 0]\n",
+      "16.881943016134134\n"
      ]
     },
     {
      "data": {
-      "text/plain": [
-       "12.083045973594572"
-      ]
+      "text/plain": "16.881943016134134"
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,18 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "matrix([[ 1.00000000e+00,  5.32907052e-16],\n",
-       "        [-2.00000000e+00,  1.00000000e+00],\n",
-       "        [ 3.00000000e+00, -4.00000000e+00]])"
-      ]
+      "text/plain": "matrix([[ 1.00000000e+00,  5.32907052e-16],\n        [-2.00000000e+00,  1.00000000e+00],\n        [ 3.00000000e+00, -4.00000000e+00]])"
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,20 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[127244,     60,     16],\n",
-       "       [ 23891,     25,      7],\n",
-       "       [ 94746,     10,      6],\n",
-       "       [ 67660,      5,      6],\n",
-       "       [157911,     60,     14]])"
-      ]
+      "text/plain": "array([[127244,     60,     16],\n       [ 23891,     25,      7],\n       [ 94746,     10,      6],\n       [ 67660,      5,      6],\n       [157911,     60,     14]])"
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,14 +283,17 @@
      "text": [
       "Минимальное: 0\n",
       "Максимальное: 2147483647\n",
+      "Среднее: 21601.00169\n",
       "Медиана: 40.0\n",
       "\n",
       "Минимальное: 1\n",
       "Максимальное: 39\n",
+      "Среднее: 9.05528\n",
       "Медиана: 9.0\n",
       "\n",
       "Минимальное: [0 1]\n",
       "Максимальное: [2147483647         39]\n",
+      "Среднее: 9.05528\n",
       "Медиана: [40.  9.]\n",
       "\n"
      ]
@@ -331,14 +301,14 @@
    ],
    "source": [
     "column = 1\n",
-    "print(f\"Минимальное: {np.min(data[:, column])}\", f\"Максимальное: {np.max(data[:, column])}\", f\"Медиана: {np.median(data[:, column])}\", sep='\\n', end='\\n\\n')\n",
+    "print(f\"Минимальное: {np.min(data[:, column])}\", f\"Максимальное: {np.max(data[:, column])}\", f'Среднее: {np.mean(data[:, column])}', f\"Медиана: {np.median(data[:, column])}\", sep='\\n', end='\\n\\n')\n",
     "\n",
     "column = 2\n",
-    "print(f\"Минимальное: {np.min(data[:, column])}\", f\"Максимальное: {np.max(data[:, column])}\", f\"Медиана: {np.median(data[:, column])}\", sep='\\n', end='\\n\\n')\n",
+    "print(f\"Минимальное: {np.min(data[:, column])}\", f\"Максимальное: {np.max(data[:, column])}\", f'Среднее: {np.mean(data[:, column])}', f\"Медиана: {np.median(data[:, column])}\", sep='\\n', end='\\n\\n')\n",
     "\n",
     "\n",
     "\n",
-    "print(f\"Минимальное: {np.min(data[:, 1:], axis=0)}\", f\"Максимальное: {np.max(data[:, 1:], axis=0)}\", f\"Медиана: {np.median(data[:, 1:], axis=0)}\", sep='\\n', end='\\n\\n')"
+    "print(f\"Минимальное: {np.min(data[:, 1:], axis=0)}\", f\"Максимальное: {np.max(data[:, 1:], axis=0)}\", f'Среднее: {np.mean(data[:, column])}', f\"Медиана: {np.median(data[:, 1:], axis=0)}\", sep='\\n', end='\\n\\n')"
    ]
   },
   {
@@ -352,22 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[127244,     60,     16],\n",
-       "       [ 23891,     25,      7],\n",
-       "       [ 94746,     10,      6],\n",
-       "       ...,\n",
-       "       [ 43407,     35,      7],\n",
-       "       [498432,     65,     15],\n",
-       "       [370915,      5,      4]])"
-      ]
+      "text/plain": "array([[127244,     60,     16],\n       [ 23891,     25,      7],\n       [ 94746,     10,      6],\n       ...,\n       [ 43407,     35,      7],\n       [498432,     65,     15],\n       [370915,      5,      4]])"
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -399,7 +361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "479\n",
+      "75461\n",
       "[[127244     60     16]\n",
       " [ 23891     25      7]\n",
       " [ 94746     10      6]\n",
@@ -417,14 +379,15 @@
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "479"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [10]\u001B[0m, in \u001B[0;36m<cell line: 10>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      7\u001B[0m formatted_data[mask, \u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28mprint\u001B[39m(formatted_data)\n\u001B[1;32m---> 10\u001B[0m count, ____ \u001B[38;5;241m=\u001B[39m \u001B[43mcount\u001B[49m\u001B[43m(\u001B[49m\u001B[43mformatted_data\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     11\u001B[0m count\n",
+      "\u001B[1;31mTypeError\u001B[0m: 'int' object is not callable"
+     ]
     }
    ],
    "source": [
@@ -437,7 +400,7 @@
     "formatted_data[mask, 1] = 1\n",
     "print(formatted_data)\n",
     "\n",
-    "count, ____ = counter(formatted_data)\n",
+    "count, ____ = count(formatted_data)\n",
     "count"
    ]
   },
@@ -452,27 +415,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100000, 3)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(100000, 3)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(formatted_data.shape)\n",
     "unique_rows = np.unique(formatted_data, axis=0)\n",
@@ -490,59 +435,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Всего уникальных ингредиентов: 37\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{13: 1,\n",
-       " 926: 2,\n",
-       " 2895: 3,\n",
-       " 5515: 4,\n",
-       " 7913: 5,\n",
-       " 9376: 6,\n",
-       " 10628: 7,\n",
-       " 10951: 8,\n",
-       " 10585: 9,\n",
-       " 9591: 10,\n",
-       " 8297: 11,\n",
-       " 6605: 12,\n",
-       " 4997: 13,\n",
-       " 3663: 14,\n",
-       " 2595: 15,\n",
-       " 1767: 16,\n",
-       " 1246: 17,\n",
-       " 790: 18,\n",
-       " 573: 19,\n",
-       " 376: 20,\n",
-       " 217: 21,\n",
-       " 161: 22,\n",
-       " 105: 23,\n",
-       " 69: 24,\n",
-       " 50: 25,\n",
-       " 28: 26,\n",
-       " 16: 28,\n",
-       " 12: 30,\n",
-       " 3: 35,\n",
-       " 1: 39,\n",
-       " 2: 33}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "unique, counts = np.unique(new_data[:, 2], return_counts=True)\n",
+    "unique, counts = np.unique(formatted_data[:, 2], return_counts=True)\n",
     "print(\"Всего уникальных ингредиентов:\", len(unique))\n",
     "dict(zip(counts,unique))"
    ]
