--- a/2 курс/TOBD_2022/Tasks/01/01_numpy_lr1_ПИ21_7_Пикалов_Николай.ipynb
+++ b/2 курс/TOBD_2022/Tasks/01/01_numpy_lr1_ПИ21_7_Пикалов_Николай.ipynb
@@ -60,7 +60,16 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0.81168668, 0.00450924, 0.03700495, 0.78983493, 0.57794125,\n        1.        , 0.19342426],\n       [0.49847851, 0.91006084, 0.81011387, 0.55035194, 0.21717984,\n        0.49228715, 0.48655157],\n       [0.4766825 , 0.15843801, 0.72656565, 0.56994211, 0.56468017,\n        0.99294544, 0.72252041],\n       [0.74454794, 0.04216397, 0.98275359, 0.62308928, 0.40306818,\n        0.68572358, 0.        ]])"
+      "text/plain": [
+       "array([[0.52911434, 0.42868511, 0.33358003, 0.85181472, 0.62180545,\n",
+       "        0.27035558, 0.28100445],\n",
+       "       [0.        , 0.07388898, 0.19942155, 0.70868749, 0.64494998,\n",
+       "        1.        , 0.66050545],\n",
+       "       [0.07637628, 0.04954385, 0.78879049, 0.51352046, 0.68856411,\n",
+       "        0.68028608, 0.15536673],\n",
+       "       [0.69576978, 0.5217677 , 0.94997401, 0.28431412, 0.66838342,\n",
+       "        0.27480564, 0.58757497]])"
+      ]
      },
      "execution_count": 2,
      "metadata": {},
@@ -99,7 +108,16 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[6, 9, 7, 0, 5, 2, 8, 7, 3, 4],\n       [2, 2, 6, 2, 8, 8, 1, 1, 4, 9],\n       [3, 0, 6, 7, 9, 4, 4, 5, 8, 6],\n       [4, 9, 1, 6, 5, 4, 6, 9, 2, 6],\n       [7, 1, 1, 1, 7, 8, 6, 7, 6, 8],\n       [0, 0, 0, 3, 1, 4, 4, 9, 9, 1],\n       [0, 4, 8, 2, 1, 0, 5, 6, 7, 6],\n       [5, 3, 6, 1, 8, 1, 1, 8, 5, 6]])"
+      "text/plain": [
+       "array([[2, 8, 3, 2, 4, 7, 8, 3, 5, 7],\n",
+       "       [1, 0, 1, 0, 4, 4, 9, 7, 5, 9],\n",
+       "       [3, 3, 7, 6, 9, 8, 0, 9, 0, 1],\n",
+       "       [8, 3, 7, 2, 9, 1, 7, 4, 5, 5],\n",
+       "       [7, 1, 7, 3, 5, 7, 6, 0, 0, 4],\n",
+       "       [2, 2, 8, 8, 0, 9, 5, 4, 8, 3],\n",
+       "       [0, 8, 7, 1, 5, 7, 4, 2, 3, 6],\n",
+       "       [1, 2, 6, 9, 2, 8, 0, 6, 2, 3]])"
+      ]
      },
      "execution_count": 3,
      "metadata": {},
@@ -120,12 +138,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "7\n"
      ]
     },
     {
      "data": {
-      "text/plain": "array([0, 0, 0, 3, 1, 4, 4, 9, 9, 1])"
+      "text/plain": [
+       "array([1, 2, 6, 9, 2, 8, 0, 6, 2, 3])"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -158,14 +178,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 0 3 0 7 8 4 3 0 7]\n",
-      "[8 3 2 7 2 1 7 0 7 0]\n",
-      "16.881943016134134\n"
+      "[0 9 2 6 3 9 4 0 3 4]\n",
+      "[5 8 1 4 5 6 5 8 8 3]\n",
+      "11.61895003862225\n"
      ]
     },
     {
      "data": {
-      "text/plain": "16.881943016134134"
+      "text/plain": [
+       "11.61895003862225"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -201,7 +223,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "matrix([[ 1.00000000e+00,  5.32907052e-16],\n        [-2.00000000e+00,  1.00000000e+00],\n        [ 3.00000000e+00, -4.00000000e+00]])"
+      "text/plain": [
+       "matrix([[ 1.00000000e+00,  5.32907052e-16],\n",
+       "        [-2.00000000e+00,  1.00000000e+00],\n",
+       "        [ 3.00000000e+00, -4.00000000e+00]])"
+      ]
      },
      "execution_count": 6,
      "metadata": {},
@@ -251,7 +277,13 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[127244,     60,     16],\n       [ 23891,     25,      7],\n       [ 94746,     10,      6],\n       [ 67660,      5,      6],\n       [157911,     60,     14]])"
+      "text/plain": [
+       "array([[127244,     60,     16],\n",
+       "       [ 23891,     25,      7],\n",
+       "       [ 94746,     10,      6],\n",
+       "       [ 67660,      5,      6],\n",
+       "       [157911,     60,     14]])"
+      ]
      },
      "execution_count": 7,
      "metadata": {},
@@ -274,8 +306,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -322,14 +356,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[127244,     60,     16],\n       [ 23891,     25,      7],\n       [ 94746,     10,      6],\n       ...,\n       [ 43407,     35,      7],\n       [498432,     65,     15],\n       [370915,      5,      4]])"
+      "text/plain": [
+       "array([[127244,     60,     16],\n",
+       "       [ 23891,     25,      7],\n",
+       "       [ 94746,     10,      6],\n",
+       "       ...,\n",
+       "       [ 43407,     35,      7],\n",
+       "       [498432,     65,     15],\n",
+       "       [370915,      5,      4]])"
+      ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -361,7 +403,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "75461\n",
+      "479\n",
       "[[127244     60     16]\n",
       " [ 23891     25      7]\n",
       " [ 94746     10      6]\n",
@@ -379,29 +421,28 @@
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [10]\u001B[0m, in \u001B[0;36m<cell line: 10>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      7\u001B[0m formatted_data[mask, \u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28mprint\u001B[39m(formatted_data)\n\u001B[1;32m---> 10\u001B[0m count, ____ \u001B[38;5;241m=\u001B[39m \u001B[43mcount\u001B[49m\u001B[43m(\u001B[49m\u001B[43mformatted_data\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     11\u001B[0m count\n",
-      "\u001B[1;31mTypeError\u001B[0m: 'int' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "479"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def count(data: np.matrix) -> int: return data[mask].shape[0], data[:, 1] == 0\n",
     "\n",
-    "count, mask = count(data)\n",
-    "print(count)\n",
+    "count_value, mask = count(data)\n",
+    "print(count_value)\n",
     "formatted_data = data.copy()\n",
     "print(formatted_data)\n",
     "formatted_data[mask, 1] = 1\n",
     "print(formatted_data)\n",
     "\n",
-    "count, ____ = count(formatted_data)\n",
-    "count"
+    "count_value, ____ = count(formatted_data)\n",
+    "count_value"
    ]
   },
   {
